k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dog-cars-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dog-cars-api
  template:
    metadata:
      labels:
        app: dog-cars-api
    spec:
      hostname: dog-cars-api
      serviceAccountName: dog-cars-account
      containers:
        - name: dog-cars-api
          image: <ACCOUNT>.dkr.ecr.us-east-1.amazonaws.com/dog-cars-api:<TAG>
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          ports:
            - containerPort: 3000
