k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dog-cars
  namespace: dog-cars
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
    service.beta.kubernetes.io/aws-load-balancer-scheme: "internet-facing"
spec:
  selector:
    app: dog-cars
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  type: LoadBalancer
